--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -60,10 +60,11 @@ body {
   cursor: pointer;
 }
 
-.home-navbar-avatar {
-  height: 30px;
-  width: 30px;
-}
+// --TEST HERE--
+// .home-navbar-avatar {
+//   height: 30px;
+//   width: 30px;
+// }
 
 .home-body {
   height: 100%;
